Fix 'preview features are not enabled' when building with Maven command line